# sysmon

./: Cargo.toml  README.md  build.rs
src/: alert.rs  config.rs  main.json  main.rs  metrics.rs  monitor.rs  utils.rs
tests/: main.rs  utils.rs
