[package]
name = "sysmon"
version = "0.1.0"
edition = "2021"
description = "System monitor CLI tool that provides real-time system metrics and alerts"
homepage = "https://github.com/SamyAlderson/sysmon"
authors = ["Samy Alderson <samy.alderson@protonmail.com>"]
license = "MIT"

[dependencies]
clap = "3.2.1"
serde_json = "1.0.92"
log = "0.4.16"
futures = "0.3.25"

[features]
monitoring = ["monitor", "metrics"]
alerting = ["alert"]
metric_collection = ["metrics"]

[dev-dependencies]
tokio = "1.21.1"
[build-dependencies]
cc = "1.0.73"

[build]
target = "x86_64-unknown-linux-gnu"

[lib]
name = "sysmon"
path = "src/main.rs"

[bin]
name = "sysmon"
path = "src/main.rs"

[workspace]
members = ["src", "tests"]

[profile.release]
opt-level = "s"

[profile.debug]
debug-assertions = true
rpath = true